# torch-lightning-playground

./: .gitignore  Dockerfile.mlflow  README.md  docker-compose.yaml  pyproject.toml
notebooks/: baseline-model-plain-torch.ipynb  baseline-model-wandb.ipynb  baseline-model.ipynb  eda.ipynb  preprocess.ipynb
recognizer/datasets/: __init__.py  segmentation.py
recognizer/models/unet/: model.py  unet_ops.py
recognizer/utils/: constants.py  mac_notification.py
